<resources>
    <string name="app_name">Mentoring</string>
    <string name="notify_completed">העלאה הושלמה</string>
    <string name="notify_failed">העלאה נכשלה</string>
    <string name="notify_upload">"העלאה מתבצעת"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="fname">שם פרטי</string>
    <string name="lname">שם משפחה</string>
    <string name="id">ת.זהות</string>
    <string name="gender">מין</string>
    <string name="phone">נייד</string>
    <string name="email">דוא"ל</string>
    <string name="mentor">מנטור</string>
    <string name="major">התמחות</string>
    <!-- sanad -->
    <string name="graduation_status">סטטוס לימודים</string>
    <string name="institution">מוסד לימודים</string>
    <string name="semster">מספר סמסטר לסיום</string>
    <string name="average">ממוצע ציונים</string>
    <string name="address">כתובת</string>
    <string name="courseid">מספר קורס</string>
    <string name="datestart">תאריך תחילת קורס</string>
    <string name="send">שלח</string>
    <string name="login">כניסה</string>

    <string name="register">הרשמה</string>
    <string name="notes">הערות</string>
    <string-array name="gender">
        <item>זכר</item>
        <item>נקבה</item>
    </string-array>
    <string name="upcv">העלאת קורות חיים</string>
    <string name="upmark">העלאת גיליון ציונים</string>
    <string name="pass1">סיסמה</string>
    <string name="title">הרשמה</string>
    <string name="pass2">הקלד שנית את הסיסמה</string>
    <string-array name="type">
        <item>מנטור</item>
        <item>מנטיי</item>
    </string-array>
    <string name="type">נרשם כ</string>
    <string name="ok">אישור</string>
    <!-- meeting row -->
    <string name="meetingTitle">כותרת פגישה</string>
    <string name="meetingTopic">נושא פגישה</string>
    <string name="meetingDate">תאריך הפגישה</string>
    <!-- Request Meeting-->
    <string name="tool_bar"><b>קביעת פגישה</b></string>
    <string name="meeting_type">סוג פגישה</string>
    <string name="date_button">בחר תאריך ושעה</string>
    <string name="request_button">שלח </string>
    <string name="summary_topic">...פרטים</string>
    <string name="faceToface">פנים אל פנים</string>
    <string name="call">שיחה</string>
    <string name="whatsup">call shalom\'s sister via whatsup</string>
    <string name="summary"> נושא: </string>
    <string name="back">חזור</string>
    <string name="emptyString"></string>
    <string name="publicFB">(כולם רואים את זה)</string>
    <string name="privateFB">(רק אני וצופן רואים את זה)</string>
    <string name="feedback">...משוב</string>
    <string name="error">(לא חוקי)</string>
    <!-- AFif update 24.2.2017-->
    <string name="user_empty">חסר שם משתמש</string>
    <string name="pass_empty">חסר שם משתמש</string>
    <string name="userNOTexist">משתמש לא קיים</string>
    <string name="userExists">משתמש קיים</string>
    <string name="error_general"> מצטערים, יש תקלת מערכת</string>
    <string name="failure">תקלה בהתחברות לשרת</string>
    <string name="signin">התחבר"/"י</string>
    <string name="forgotpass">שכחתי סיסמה</string>
    <!-- Error Strings -->
    <string name="invalid_name">שם לא חוקי</string>
    <string name="invalid_password">סיסמה לא חוקית</string>

    <!-- Registration Strings -->
    <string name="logout">יציאה</string>
    <string name="registered">נרשם בהצלחה</string>

    <!-- sanad -->
    <string name="mentee_profile"> מנטיי פרופיל</string>
    <string-array name="graduation_status">
        <item>סטודנט</item>
        <item>בוגר</item>
    </string-array>

    <!-- mentor profile 1/3/2017 -->
    <string name="mentor_profile"> מנטור פרופיל</string>
    <string name="main_page">עמוד ראשי</string>
    <string name="company">חברה</string>

    <!-- 2/3/2017 -->
    <string name="cv_filename"><u>CV קובץ</u></string>
    <string name="grade_sheet"><u>קובץ גליון ציונים</u></string>
    <string name="download">הורדה</string>
    <!-- Registration Validation Strings -->
    <string name="Illegal_name">שם לא חוקי</string>
    <string name="Illegal_last_name">שם משפחה חוקי</string>
    <string name="Illegal_email">דואר אלקטרוני לא חוקי</string>
    <string name="Illegal_password">סיסמה לא חוקית על הסיסמה להכיל לפחות אות גדולה אותיות קטנות ורמזים מיוחדים</string>
    <string name="Illegal_second_password">הסיסמה לא זוהה לראשונה</string>
    <string name="Illegal_phone_number">מספר פלאפון לא חוקי","מספרי פלאפון לא פחות "/" יותר מעשר ספרות</string>
    <string name="request">קביעת פגישה</string>

    <string name="viewResume">צפייה בקורות חיים</string>
    <string name="viewGradeSheet">צפייה גליון ציונים</string>

</resources>
