<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tsofenbg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title"
      android:layout_gravity="top|center_horizontal"
      android:textSize="32sp"
      android:textColor="@color/white"
      android:fontFamily="sans-serif-condensed"/>
  <android.support.design.widget.TextInputLayout
      android:id="@+id/edfname"
      android:layout_width="match_parent"
      android:textDirection="rtl"
      android:layout_height="wrap_content">

    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textDirection="rtl"
        android:background="@drawable/icon_bg"
        android:textColor="@color/white"
        android:hint="@string/fname"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/phone"
      android:layout_width="match_parent"
      android:textDirection="rtl"
      android:layout_height="wrap_content">

    <EditText
        android:id="@+id/phone2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textDirection="rtl"
        android:inputType="phone"
        android:background="@drawable/icon_bg"
        android:textColor="@color/white"
        android:hint="@string/phone"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/edlname"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <EditText
        android:id="@+id/lname"
        android:textDirection="rtl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_bg"
        android:textColor="@color/white"
        android:hint="@string/lname"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/ed1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <EditText
        android:textDirection="rtl"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_bg"
        android:textColor="@color/white"
        android:hint="@string/email"/>
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:id="@+id/ed2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <EditText
        android:textDirection="rtl"
        android:id="@+id/pass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass1"
        android:background="@drawable/icon_bg"
        android:textColor="@color/white"
        android:gravity="right"/>
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:id="@+id/ed3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <EditText
        android:id="@+id/pass2"
        android:layout_width="match_parent"
        android:textDirection="rtl"
        android:layout_height="wrap_content"
        android:hint="@string/pass2"
        android:background="@drawable/icon_bg"
        android:textColor="@color/white"
        android:gravity="right"/>
  </android.support.design.widget.TextInputLayout>
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="right"
      >

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/type"
        android:entries="@array/type"
        android:layout_gravity="right"
        android:gravity="right"
        >

    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:layout_gravity="right"
        android:textDirection="rtl"
        android:gravity="right"
        android:background="@drawable/icon_bg"
        android:textColor="@color/white"
        />

  </LinearLayout>


  <Button
      android:layout_height="wrap_content"
      android:text="@string/ok"
      android:layout_gravity="bottom"
      android:layout_width="wrap_content"
      android:textDirection="rtl"
      android:background="@drawable/icon_bg"
      android:textColor="@color/white"
      android:id="@+id/btnok"
      />
</LinearLayout>

